# NovaDB

./: .gitignore  CMakeLists.txt  README.md
api/: main.py  models.py  service.py
app/: cli.cpp  main.cpp
include/core/: EmbeddingPool.h  EmbeddingView.h  Record.h  VectorDB.h
include/search/: SearchEngine.h  SearchResult.h  Similarity.h  TopKHeap.h
include/storage/: BinarySerializer.h  FileManager.h  StorageEngine.h
src/: main.cpp
src/core/: EmbeddingPool.cpp  VectorDB.cpp
src/search/: SearchEngine.cpp  Similarity.cpp  TopKHeap.cpp
src/storage/: BinarySerializer.cpp  FileManager.cpp  StorageEngine.cpp
tests/: test_heap.cpp  test_search.cpp  test_similarity.cpp
